--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <img id="bkg-img"src="img/snow-field.jpeg">
+    <!-- <img id="bkg-img"src="img/snow-field.jpeg"> -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,8 +14,8 @@
     </style>
 </head>
 <body >
-    <img class="p1-sprite" src="gifs/Martial-Hero-idle.gif" alt="samurai fighter">
-   
+    <img class="p1-sprite" src="gifs/Martial-Hero-idle.gif" alt="p1-sprite">
+    <img class="p2-sprite" src="../gifs/Wizard-idle.gif" alt="p2-sprite">
 </body>
 <footer class="footer">
         <div id="p1-container" class="player-containers">
