--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <script type="text/javascript" src="js/app.js" defer></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Gowun+Batang&family=Josefin+Sans&family=Julius+Sans+One&family=Tourney:wght@100&family=VT323&family=Yomogi&display=swap');
-        
     </style>
+    <button id="test-button">test</button>
 </head>
 <body >
     <img class="p1-sprite" src="gifs/Martial-Hero-idle.gif" alt="p1-sprite">
@@ -59,5 +59,8 @@
             </div>
         </div>
 </footer>
+    <audio id="hip-hop4">
+        <source src="music/MFA BEAT 4.mp3">
+    </audio>
 
 </html>
