--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
     <button id="test-button">test</button>
 </head>
 <body >
-    <img class="p1-sprite" src="gifs/Martial-Hero-idle.gif" alt="p1-sprite">
-    <img class="p2-sprite" src="../gifs/Wizard-idle.gif" alt="p2-sprite">
+    <img class="p1-sprite" id="p1-sprite" src="gifs/Martial-Hero-idle.gif" alt="p1-sprite">
+    <img class="p1-sprite" id="p1-effect" src="gifs/ManaFlare.gif" alt="p1-effect">
+    <p class="p1-sprite" id="p1-sprite-points">+10</p>
+    <img class="p2-sprite" id= "p1-sprite" src="../gifs/Wizard-idle.gif" alt="p2-sprite">
+    <img class="p2-sprite" id="p2-effect" src="gifs/Explosion.gif" alt="p2-effect">
+    <p class="p2-sprite" id="p2-sprite-points">+10</p>
 </body>
 <footer class="footer">
         <div id="p1-container" class="player-containers">
