--- a/index.html
+++ b/index.html
@@ -1,70 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-    <!-- <img id="bkg-img"src="img/snow-field.jpeg"> -->
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SPRITE-BATTLE</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="js/app.js" defer></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Gowun+Batang&family=Josefin+Sans&family=Julius+Sans+One&family=Tourney:wght@100&family=VT323&family=Yomogi&display=swap');
-    </style>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>SPRITE-BATTLE</title>
+        <link rel="stylesheet" href="css/style.css">
+        <script type="text/javascript" src="js/app.js" defer></script>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Gowun+Batang&family=Josefin+Sans&family=Julius+Sans+One&family=Tourney:wght@100&family=VT323&family=Yomogi&display=swap');
+            </style>
     <button id="test-button">test</button>
 </head>
 <body >
-    <img class="p1-sprite" id="p1-sprite" src="gifs/Martial-Hero-idle.gif" alt="p1-sprite">
-    <img class="p1-sprite" id="p1-effect" src="gifs/ManaFlare.gif" alt="p1-effect">
-    <p class="p1-sprite" id="p1-sprite-points">+10</p>
-    <img class="p2-sprite" id= "p1-sprite" src="../gifs/Wizard-idle.gif" alt="p2-sprite">
-    <img class="p2-sprite" id="p2-effect" src="gifs/Explosion.gif" alt="p2-effect">
-    <p class="p2-sprite" id="p2-sprite-points">+10</p>
+        <img id="bkg-img" src="img/snow-field.jpeg">
+        <img class="p1-sprite" id="p1-sprite" src="gifs/Martial-Hero-idle.gif" alt="p1-sprite">
+        <img class="p1-sprite" id="p1-effect" src="gifs/ManaFlare.gif" alt="p1-effect">
+        <p class="p1-sprite" id="p1-sprite-points"></p>
+        <img class="p2-sprite" id= "p1-sprite" src="../gifs/Wizard-idle.gif" alt="p2-sprite">
+        <img class="p2-sprite" id="p2-effect" src="gifs/Explosion.gif" alt="p2-effect">
+        <p class="p2-sprite" id="p2-sprite-points"></p>
+        <footer class="footer">
+            <div id="p1-container" class="player-containers">
+                <div id="p1-battle-menu" class="battle-menu">
+                    <!-- <h1 class="labels">p1-container</h1> -->
+                    <button id="p1-fight-button" class="battle-buttons">Fight</button>
+                    <button id="p1-spell-button" class="battle-buttons">Spell</button>
+                    <button id="p1-heal-button" class="battle-buttons">Heal</button>
+                </div>
+                <div id="p1-stats" class="battle-menu">
+                    <div id="p1-stats-text">
+                        <h3 class="p1-name">Player 1:</h3>
+                        <h3>HP</h3>
+                        <h3>MP</h3>
+                    </div>
+                    <div id="p1-stats-nums">
+                        <h3></h3>
+                        <h3 id="p1-HP">60/  60</h3>
+                        <h3 id="p1-MP">30/  30</h3>
+                    </div>
+                </div>
+            </div>
+            <div id="p2-container" class="player-containers">
+                <div id="p2-battle-menu" class="battle-menu">
+                    <!-- <h1>p2-container</h1> -->
+                    <button id="p2-fight-button" class="battle-buttons">Fight</button>
+                    <button id="p2-spell-button" class="battle-buttons">Spell</button>
+                    <button id="p2-heal-button" class="battle-buttons">Heal</button>
+                </div>
+                <div id="p2-stats" class="battle-menu">
+                    <div id="p2-stats-text">
+                        <h3 class="p2-name">Player 2:</h3>
+                        <h3>HP</h3>
+                        <h3>MP</h3>
+                    </div>
+                    <div id="p2-stats-nums">
+                        <h3></h3>
+                        <h3 id="p2-HP">60/  60</h3>
+                        <h3 id="p2-MP">30/  30</h3>
+                    </div>
+                </div>
+            </div>
+        </footer>
 </body>
-<footer class="footer">
-        <div id="p1-container" class="player-containers">
-            <div id="p1-battle-menu" class="battle-menu">
-                <!-- <h1 class="labels">p1-container</h1> -->
-                <button id="p1-fight-button" class="battle-buttons">Fight</button>
-                <button id="p1-spell-button" class="battle-buttons">Spell</button>
-                <button id="p1-heal-button" class="battle-buttons">Heal</button>
-            </div>
-            <div id="p1-stats" class="battle-menu">
-                <div id="p1-stats-text">
-                    <h3 class="p1-name">Player1:</h3>
-                    <h3>HP</h3>
-                    <h3>MP</h3>
-                </div>
-                <div id="p1-stats-nums">
-                    <h3></h3>
-                    <h3>60/  60</h3>
-                    <h3>30/  30</h3>
-                </div>
-            </div>
-        </div>
-        <div id="p2-container" class="player-containers">
-            <div id="p2-battle-menu" class="battle-menu">
-                <!-- <h1>p2-container</h1> -->
-                <button id="p2-fight-button" class="battle-buttons">Fight</button>
-                <button id="p2-spell-button" class="battle-buttons">Spell</button>
-                <button id="p2-heal-button" class="battle-buttons">Heal</button>
-            </div>
-            <div id="p2-stats" class="battle-menu">
-                <div id="p2-stats-text">
-                    <h3 class="p2-name">Player2:</h3>
-                    <h3>HP</h3>
-                    <h3>MP</h3>
-                </div>
-                <div id="p2-stats-nums">
-                    <h3></h3>
-                    <h3>60/  60</h3>
-                    <h3>30/  30</h3>
-                </div>
-            </div>
-        </div>
-</footer>
     <audio id="hip-hop4">
         <source src="music/MFA BEAT 4.mp3">
     </audio>
-
-</html>
+    
+    </html>
