randomized player initiative; responsive battle menus toggle disabled; announce div created/animated; HP/MP min max set

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Gowun+Batang&family=Josefin+Sans&family=Julius+Sans+One&family=Tourney:wght@100&family=VT323&family=Yomogi&display=swap');
             </style>
-    <button id="test-button">test</button>
+    <!-- <button id="test-button">test</button> -->
 </head>
+<div id="announce-bar" class="player-containers">announce bar</div>
 <body >
-        <img id="bkg-img" src="img/snow-field.jpeg">
-        <img class="p1-sprite" id="p1-sprite" src="gifs/Martial-Hero-idle.gif" alt="p1-sprite">
+    <img id="bkg-img" src="img/snow-field.jpeg">
+    <img class="p1-sprite" id="p1-sprite" src="gifs/Martial-Hero-idle.gif" alt="p1-sprite">
         <img class="p1-sprite" id="p1-effect" src="gifs/ManaFlare.gif" alt="p1-effect">
         <p class="p1-sprite" id="p1-sprite-points"></p>
         <img class="p2-sprite" id= "p2-sprite" src="../gifs/Wizard-idle.gif" alt="p2-sprite">
