fixed turn-based gameplay; animation tweaks needed; add audio next

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <img class="p1-sprite" id="p1-sprite" src="gifs/Martial-Hero-idle.gif" alt="p1-sprite">
         <img class="p1-sprite" id="p1-effect" src="gifs/ManaFlare.gif" alt="p1-effect">
         <p class="p1-sprite" id="p1-sprite-points"></p>
-        <img class="p2-sprite" id= "p2-sprite" src="../gifs/Wizard-idle.gif" alt="p2-sprite">
+        <img class="p2-sprite" id= "p2-sprite" src="../gifs/Wizard-idle-left.gif" alt="p2-sprite">
         <img class="p2-sprite" id="p2-effect" src="gifs/Explosion.gif" alt="p2-effect">
         <p class="p2-sprite" id="p2-sprite-points"></p>
         <footer class="footer">
