--- a/index.html
+++ b/index.html
@@ -1,5 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- mp3s -->
+    <audio id="death-sfx" class="sfx">
+        <source src="sfx/Samurai-Death.mp3">
+        </audio>
+    <audio id="sword-hit-sfx" class="sfx">
+        <source src="sfx/Sword-hit.mp3">
+    </audio>
+    <audio id="sword-crit-sfx" class="sfx">
+        <source src="sfx/Sword-crit.mp3">
+    </audio>
+    <audio id="sword-miss-sfx" class="sfx">
+        <source src="sfx/Sword-miss.mp3">
+    </audio>
+    <audio id="sword-drama-sfx" class="sfx">
+        <source src="sfx/Sword-dramatic.mp3">
+    </audio>
+    <audio id="explosion-sfx" class="sfx">
+        <source src="sfx/Explosion.mp3">
+    </audio>
+    <audio id="frostbite-sfx" class="sfx">
+        <source src="sfx/Frostbite.mp3">
+    </audio>
+    <audio id="heal1-sfx" class="sfx">
+        <source src="sfx/Heal-1.mp3">
+    </audio>
+    <audio id="heal2-sfx" class="sfx">
+        <source src="sfx/Heal-2.mp3">
+    </audio>
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
