--- a/index.html
+++ b/index.html
@@ -38,26 +38,27 @@
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Gowun+Batang&family=Josefin+Sans&family=Julius+Sans+One&family=Tourney:wght@100&family=VT323&family=Yomogi&display=swap');
             </style>
-    <!-- <button id="test-button">test</button> -->
 </head>
-<div id="announce-bar" class="player-containers">announce bar</div>
+<div id="announce-bar" class="player-containers announce"><div>THIS IS</div> S P R I T E   C L U B ! ! !
+</div>
+<button id="play-button" class="player-containers announce">FIGHT NOW!</button>
 <body >
-    <img id="bkg-img" src="img/snow-field.jpeg">
-    <img class="p1-sprite" id="p1-sprite" src="gifs/Martial-Hero-idle.gif" alt="p1-sprite">
+    <img id="bkg-img" src="img/japanese-temple.png">
+    <img class="p1-sprite hide" id="p1-sprite" src="gifs/Martial-Hero-idle.gif" alt="p1-sprite">
         <img class="p1-sprite" id="p1-effect" src="gifs/ManaFlare.gif" alt="p1-effect">
         <p class="p1-sprite" id="p1-sprite-points"></p>
-        <img class="p2-sprite" id= "p2-sprite" src="../gifs/Wizard-idle-left.gif" alt="p2-sprite">
+        <img class="p2-sprite hide" id= "p2-sprite" src="../gifs/Wizard-idle-left.gif" alt="p2-sprite">
         <img class="p2-sprite" id="p2-effect" src="gifs/Explosion.gif" alt="p2-effect">
         <p class="p2-sprite" id="p2-sprite-points"></p>
         <footer class="footer">
-            <div id="p1-container" class="player-containers">
-                <div id="p1-battle-menu" class="battle-menu">
+            <div id="p1-container" class="player-containers hide">
+                <div id="p1-battle-menu" class="battle-menu hide">
                     <!-- <h1 class="labels">p1-container</h1> -->
                     <button id="p1-fight-button" class="battle-buttons">Fight</button>
                     <button id="p1-spell-button" class="battle-buttons">Spell</button>
                     <button id="p1-heal-button" class="battle-buttons">Heal</button>
                 </div>
-                <div id="p1-stats" class="battle-menu">
+                <div id="p1-stats" class="battle-menu hide">
                     <div id="p1-stats-text">
                         <h3 class="p1-name">Player 1:</h3>
                         <h3>HP</h3>
@@ -70,14 +71,14 @@
                     </div>
                 </div>
             </div>
-            <div id="p2-container" class="player-containers">
-                <div id="p2-battle-menu" class="battle-menu">
+            <div id="p2-container" class="player-containers hide">
+                <div id="p2-battle-menu" class="battle-menu hide">
                     <!-- <h1>p2-container</h1> -->
                     <button id="p2-fight-button" class="battle-buttons">Fight</button>
                     <button id="p2-spell-button" class="battle-buttons">Spell</button>
                     <button id="p2-heal-button" class="battle-buttons">Heal</button>
                 </div>
-                <div id="p2-stats" class="battle-menu">
+                <div id="p2-stats" class="battle-menu hide">
                     <div id="p2-stats-text">
                         <h3 class="p2-name">Player 2:</h3>
                         <h3>HP</h3>
@@ -92,8 +93,8 @@
             </div>
         </footer>
 </body>
-    <audio id="hip-hop4">
-        <source src="music/MFA BEAT 4.mp3">
+    <audio id="hip-hop7">
+        <source src="music/MFA 7.mp3">
     </audio>
     
     </html>
