extra music option added

--- a/index.html
+++ b/index.html
@@ -96,5 +96,8 @@
     <audio id="hip-hop7">
         <source src="music/MFA 7.mp3">
     </audio>
+    <audio id="hip-hop2">
+        <source src="music/MFA BEAT 2.mp3">
+    </audio>
     
     </html>
