--- a/index.html
+++ b/index.html
@@ -55,11 +55,13 @@
     
     <body >
         <img id="bkg-img" src="img/japanese-temple.png">
-        <label id="mute" class="switch">
-            <input type="checkbox" checked>
-            <span class="slider"></span>
-          </label>
-        <input id="vol-control" type="range" min="0" max="1" step=".005" value=".2"></input>
+        <div class=" vol-cont">
+            <label id="mute" class="switch">
+                <input type="checkbox" checked>
+                <span class="slider"></span>
+            </label>
+            <input id="vol-control" type="range" min="0" max="1" step=".005" value=".2"></input>
+        </div>
         <img class="p1-sprite hide" id="p1-sprite" src="gifs/Martial-Hero-idle.gif" alt="p1-sprite">
             <img class="p1-sprite" id="p1-effect" src="gifs/ManaFlare.gif" alt="p1-effect">
             <p class="p1-sprite" id="p1-sprite-points"></p>
